@@ -1,8 +1,9 @@
 ;;;; -*- coding: utf-8; fill-column: 78 -*-
 
 changes relative to sbcl-2.4.5:
-  * enhancement: name conflicts resulting from colliding symbols in IMPORT are
-    resolved once for each name, rather than pairwise.
+  * enhancement: name conflicts resulting from colliding symbols in IMPORT and
+    USE-PACKAGE are resolved once for each name, rather than between pairwise
+    colliding symbols.
   * bug fix: EXPORT could be tricked into exporting two distinct symbols of
     the same name from the same package.
 
